<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    tools:context=".view.home.HomeActivity">

    <TextView
        android:id="@+id/point_mainapp_demo_appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ui_3m"
        android:text="@string/point_mainapp_demo_app_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/point_mainapp_demo_app_go_to_payment_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/ui_6m"
        android:layout_marginTop="@dimen/ui_3m"
        android:paddingVertical="@dimen/ui_1_25m"
        android:text="@string/point_mainapp_demo_app_go_to_payment"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/ui_1_25m"
        app:icon="@drawable/point_mainapp_demo_app_ic_payments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/point_mainapp_demo_appTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/point_mainapp_demo_app_go_to_bluetooth_tools"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/ui_6m"
        android:layout_marginTop="@dimen/ui_2m"
        android:paddingVertical="@dimen/ui_1_25m"
        app:icon="@drawable/point_mainapp_demo_app_ic_bluetooth"
        android:text="@string/point_mainapp_demo_app_button_bluetooth_tools"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/ui_1_25m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/point_mainapp_demo_app_go_to_payment_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/point_mainapp_demo_app_go_to_bluetooth_ui_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/ui_6m"
        android:layout_marginTop="@dimen/ui_2m"
        android:paddingVertical="@dimen/ui_1_25m"
        app:icon="@drawable/point_mainapp_demo_app_ic_bluetooth"
        android:text="@string/point_mainapp_demo_app_button_bluetooth_ui_settings"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/ui_1_25m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/point_mainapp_demo_app_go_to_bluetooth_tools" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/point_mainapp_demo_app_go_to_refunds"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/ui_6m"
        android:layout_marginTop="@dimen/ui_2m"
        android:paddingVertical="@dimen/ui_1_25m"
        app:icon="@drawable/point_mainapp_demo_app_ic_payments"
        android:text="@string/point_mainapp_demo_app_button_refunds"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/ui_1_25m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/point_mainapp_demo_app_go_to_bluetooth_ui_settings" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/point_mainapp_demo_app_go_to_printer_test"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/ui_6m"
        android:layout_marginTop="@dimen/ui_2m"
        android:paddingVertical="@dimen/ui_1_25m"
        app:icon="@drawable/point_mainapp_demo_app_black_ic_print"
        android:text="@string/point_mainapp_demo_app_button_refunds"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/ui_1_25m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/point_mainapp_demo_app_go_to_refunds" />

</androidx.constraintlayout.widget.ConstraintLayout>
